--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-minversion = 3.8.0
-envlist =  python3.7, python3.8, python3.9
+minversion = 3.6.0
+envlist = python3.6, python3.7, python3.8, python3.9
 isolated_build = true
 
 [gh-actions]
 python =
-
+    python3.6: python3.6, mypy, flake8
     python3.7: python3.7
     python3.8: python3.8
     python3.9: python3.9
@@ -18,3 +18,13 @@ deps =
 commands =
     pytest --basetemp={envtmpdir}
 
+[testenv:flake8]
+basepython = python3.6
+deps = flake8
+commands = flake8 src tests
+
+[testenv:mypy]
+basepython = python3.6
+deps =
+    -r{toxinidir}/requirements_dev.txt
+commands = mypy src
