--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
 minversion = 3.6.0
-envlist =  python3.7, python3.8, python3.9
+envlist = python3.6 python3.7, python3.8, python3.9
 isolated_build = true
 
 [gh-actions]
 python =
+    python3.6: python3.6
     python3.7: python3.7
     python3.8: python3.8
     python3.9: python3.9
