--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,14 @@
 [tox]
 minversion = 3.8.0
-envlist =   python3.8, python3.9
+envlist =   python3.8, python3.9, python3.10, python3.11
 isolated_build = true
 
 [gh-actions]
 python =
     python3.8: python3.8, mypy, flake8
     python3.9: python3.9
+    python3.10: python3.10
+    python3.11: python3.11
 
 [testenv]
 setenv =
