--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
 minversion = 3.8.0
-envlist =   python3.8, python3.9, python3.10, python3.11
+envlist =   python3.8, python3.9, python3.10, python3.11, flake8
 isolated_build = true
 
 [gh-actions]
 python =
-    python3.8: python3.8, mypy, flake8
+    python3.8: python3.8
+    pytohn3.8: flake8
     python3.9: python3.9
     python3.10: python3.10
     python3.11: python3.11
@@ -23,8 +24,3 @@ basepython = python3.8
 deps = -rrequirements_dev.txt
 commands = flake8 src tests
 
-[mypy]
-basepython = python3.8
-deps =
-    -rrequirements_dev.txt
-commands = mypy src
