--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.8.0
-envlist =   python3.8, python3.9, python3.10, python3.11, flake8
+envlist =   python3.8, python3.9, python3.10, flake8
 isolated_build = true
 
 [gh-actions]
@@ -9,7 +9,6 @@ python =
     pytohn3.8: flake8
     python3.9: python3.9
     python3.10: python3.10
-    python3.11: python3.11
 
 [testenv]
 setenv =
